--- a/index.html
+++ b/index.html
@@ -20,7 +20,117 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <table class="board">
+    	<caption><h1>Chess</h1></caption>
+    	<thead>
+    	<tr>
+    		<th>Markers</th>
+    		<th>Column 1</th>
+    		<th>Column 2</th>
+    		<th>Column 3</th>
+    		<th>Column 4</th>
+    		<th>Column 5</th>
+    		<th>Column 6</th>
+    		<th>Column 7</th>
+    		<th>Column 8</th>
+    	</tr>
+    	</thead>
+    	<tbody>
+    	<tr>
+    		<th>Row A</th>
+    		<td class="light"></td>
+    		<td class="dark"></td>
+    		<td class="light"></td>
+    		<td class="dark"></td>
+    		<td class="light"></td>
+    		<td class="dark"></td>
+    		<td class="light"></td>
+    		<td class="dark"></td>
+    	</tr>
+    	<tr>
+    		<th>Row B</th>
+    		<td class="dark"></td>
+    		<td class="light"></td>
+    		<td class="dark"></td>
+    		<td class="light"></td>
+    		<td class="dark"></td>
+    		<td class="light"></td>
+    		<td class="dark"></td>
+    		<td class="light"></td>
+    	</tr>
+    	<tr>
+    		<th>Row C</th>
+    		<td class="light"></td>
+    		<td class="dark"></td>
+    		<td class="light"></td>
+    		<td class="dark"></td>
+    		<td class="light"></td>
+    		<td class="dark"></td>
+    		<td class="light"></td>
+    		<td class="dark"></td>
+    	</tr>
+    	<tr>
+    		<th>Row D</th>
+    		<td class="dark"></td>
+    		<td class="light"></td>
+    		<td class="dark"></td>
+    		<td class="light"></td>
+    		<td class="dark"></td>
+    		<td class="light"></td>
+    		<td class="dark"></td>
+    		<td class="light"></td>
+    	</tr>
+    	<tr>
+    		<th>Row E</th>
+    		<td class="light"></td>
+    		<td class="dark"></td>
+    		<td class="light"></td>
+    		<td class="dark"></td>
+    		<td class="light"></td>
+    		<td class="dark"></td>
+    		<td class="light"></td>
+    		<td class="dark"></td>
+    	</tr>
+    	<tr>
+    		<th>Row F</th>
+    		<td class="dark"></td>
+    		<td class="light"></td>
+    		<td class="dark"></td>
+    		<td class="light"></td>
+    		<td class="dark"></td>
+    		<td class="light"></td>
+    		<td class="dark"></td>
+    		<td class="light"></td>
+    	</tr>
+    	<tr>
+    		<th>Row G</th>
+    		<td class="light"></td>
+    		<td class="dark"></td>
+    		<td class="light"></td>
+    		<td class="dark"></td>
+    		<td class="light"></td>
+    		<td class="dark"></td>
+    		<td class="light"></td>
+    		<td class="dark"></td>
+    	</tr>
+    	<tr>
+    		<th>Row H</th>
+    		<td class="dark"></td>
+    		<td class="light"></td>
+    		<td class="dark"></td>
+    		<td class="light"></td>
+    		<td class="dark"></td>
+    		<td class="light"></td>
+    		<td class="dark"></td>
+    		<td class="light"></td>
+    	</tr>
+    	<tbody>
+    </table>
+    <button class="button" id="rewind" type="button">Rewind</button>
+    <button class="button" id="step_back" type="button">Step Back</button>
+    <button class="button" id="play_pause" type="button">Play/Pause</button>
+    <button class="button" id="step_foward" type="button">Step Forward</button>
+    <button class="button" id="fast_foward" type="button">Fast Forward</button>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
