--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/controllers.js"></script>
-        <script src="js/main.js"></script>
+        <!-- <script src="js/tests.js"></script> -->
+        <!-- <script src="js/main.js"></script> -->
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
