--- a/index.html
+++ b/index.html
@@ -20,24 +20,47 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <table class="board">
+      <div id="start">
+      <table class="board">
     	<caption><h1>Chess</h1></caption>
     	<thead>
     	<tr>
     		<th>Markers</th>
-    		<th>Column 1</th>
-    		<th>Column 2</th>
-    		<th>Column 3</th>
-    		<th>Column 4</th>
-    		<th>Column 5</th>
-    		<th>Column 6</th>
-    		<th>Column 7</th>
-    		<th>Column 8</th>
+    		<th>a</th>
+    		<th>b</th>
+    		<th>c</th>
+    		<th>d</th>
+    		<th>e</th>
+    		<th>f</th>
+    		<th>g</th>
+    		<th>h</th>
     	</tr>
     	</thead>
     	<tbody>
     	<tr>
-    		<th>Row A</th>
+    		<th>8</th>
+    		<td class="light"><img class="piece" src="img/BlackR.ico"></td>
+    		<td class="dark"><img class="piece" src="img/BlackN.ico"></td>
+    		<td class="light"><img class="piece" src="img/BlackB.ico"></td>
+    		<td class="dark"><img class="piece" src="img/BlackQ.ico"></td>
+    		<td class="light"><img class="piece" src="img/BlackK.ico"></td>
+    		<td class="dark"><img class="piece" src="img/BlackB.ico"></td>
+    		<td class="light"><img class="piece" src="img/BlackN.ico"></td>
+    		<td class="dark"><img class="piece" src="img/BlackR.ico"></td>
+    	</tr>
+    	<tr>
+    		<th>7</th>
+    		<td class="dark"><img class="piece" src="img/BlackP.ico"></td>
+    		<td class="light"><img class="piece" src="img/BlackP.ico"></td>
+    		<td class="dark"><img class="piece" src="img/BlackP.ico"></td>
+    		<td class="light"><img class="piece" src="img/BlackP.ico"></td>
+    		<td class="dark"><img class="piece" src="img/BlackP.ico"></td>
+    		<td class="light"><img class="piece" src="img/BlackP.ico"></td>
+    		<td class="dark"><img class="piece" src="img/BlackP.ico"></td>
+    		<td class="light"><img class="piece" src="img/BlackP.ico"></td>
+    	</tr>
+    	<tr>
+    		<th>6</th>
     		<td class="light"></td>
     		<td class="dark"></td>
     		<td class="light"></td>
@@ -48,7 +71,7 @@
     		<td class="dark"></td>
     	</tr>
     	<tr>
-    		<th>Row B</th>
+    		<th>5</th>
     		<td class="dark"></td>
     		<td class="light"></td>
     		<td class="dark"></td>
@@ -59,7 +82,7 @@
     		<td class="light"></td>
     	</tr>
     	<tr>
-    		<th>Row C</th>
+    		<th>4</th>
     		<td class="light"></td>
     		<td class="dark"></td>
     		<td class="light"></td>
@@ -70,7 +93,7 @@
     		<td class="dark"></td>
     	</tr>
     	<tr>
-    		<th>Row D</th>
+    		<th>3</th>
     		<td class="dark"></td>
     		<td class="light"></td>
     		<td class="dark"></td>
@@ -81,51 +104,246 @@
     		<td class="light"></td>
     	</tr>
     	<tr>
-    		<th>Row E</th>
-    		<td class="light"></td>
-    		<td class="dark"></td>
-    		<td class="light"></td>
-    		<td class="dark"></td>
-    		<td class="light"></td>
-    		<td class="dark"></td>
-    		<td class="light"></td>
-    		<td class="dark"></td>
+    		<th>2</th>
+    		<td class="light"><img class="piece" src="img/WhiteP.ico"></td>
+    		<td class="dark"><img class="piece" src="img/WhiteP.ico"></td>
+    		<td class="light"><img class="piece" src="img/WhiteP.ico"></td>
+    		<td class="dark"><img class="piece" src="img/WhiteP.ico"></td>
+    		<td class="light"><img class="piece" src="img/WhiteP.ico"></td>
+    		<td class="dark"><img class="piece" src="img/WhiteP.ico"></td>
+    		<td class="light"><img class="piece" src="img/WhiteP.ico"></td>
+    		<td class="dark"><img class="piece" src="img/WhiteP.ico"></td>
     	</tr>
     	<tr>
-    		<th>Row F</th>
-    		<td class="dark"></td>
-    		<td class="light"></td>
-    		<td class="dark"></td>
-    		<td class="light"></td>
-    		<td class="dark"></td>
-    		<td class="light"></td>
-    		<td class="dark"></td>
-    		<td class="light"></td>
-    	</tr>
-    	<tr>
-    		<th>Row G</th>
-    		<td class="light"></td>
-    		<td class="dark"></td>
-    		<td class="light"></td>
-    		<td class="dark"></td>
-    		<td class="light"></td>
-    		<td class="dark"></td>
-    		<td class="light"></td>
-    		<td class="dark"></td>
-    	</tr>
-    	<tr>
-    		<th>Row H</th>
-    		<td class="dark"></td>
-    		<td class="light"></td>
-    		<td class="dark"></td>
-    		<td class="light"></td>
-    		<td class="dark"></td>
-    		<td class="light"></td>
-    		<td class="dark"></td>
-    		<td class="light"></td>
+    		<th>1</th>
+    		<td class="dark"><img class="piece" src="img/WhiteR.ico"></td>
+    		<td class="light"><img class="piece" src="img/WhiteN.ico"></td>
+    		<td class="dark"><img class="piece" src="img/WhiteB.ico"></td>
+    		<td class="light"><img class="piece" src="img/WhiteQ.ico"></td>
+    		<td class="dark"><img class="piece" src="img/WhiteK.ico"></td>
+    		<td class="light"><img class="piece" src="img/WhiteB.ico"></td>
+    		<td class="dark"><img class="piece" src="img/WhiteN.ico"></td>
+    		<td class="light"><img class="piece" src="img/WhiteR.ico"></td>
     	</tr>
     	<tbody>
     </table>
+    </div>
+    <div id="white1">
+      <table class="board">
+      <caption><h1>Chess</h1></caption>
+      <thead>
+      <tr>
+        <th>Markers</th>
+        <th>a</th>
+        <th>b</th>
+        <th>c</th>
+        <th>d</th>
+        <th>e</th>
+        <th>f</th>
+        <th>g</th>
+        <th>h</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <th>8</th>
+        <td class="light"><img class="piece" src="img/BlackR.ico"></td>
+        <td class="dark"><img class="piece" src="img/BlackN.ico"></td>
+        <td class="light"><img class="piece" src="img/BlackB.ico"></td>
+        <td class="dark"><img class="piece" src="img/BlackQ.ico"></td>
+        <td class="light"><img class="piece" src="img/BlackK.ico"></td>
+        <td class="dark"><img class="piece" src="img/BlackB.ico"></td>
+        <td class="light"><img class="piece" src="img/BlackN.ico"></td>
+        <td class="dark"><img class="piece" src="img/BlackR.ico"></td>
+      </tr>
+      <tr>
+        <th>7</th>
+        <td class="dark"><img class="piece" src="img/BlackP.ico"></td>
+        <td class="light"><img class="piece" src="img/BlackP.ico"></td>
+        <td class="dark"><img class="piece" src="img/BlackP.ico"></td>
+        <td class="light"><img class="piece" src="img/BlackP.ico"></td>
+        <td class="dark"><img class="piece" src="img/BlackP.ico"></td>
+        <td class="light"><img class="piece" src="img/BlackP.ico"></td>
+        <td class="dark"><img class="piece" src="img/BlackP.ico"></td>
+        <td class="light"><img class="piece" src="img/BlackP.ico"></td>
+      </tr>
+      <tr>
+        <th>6</th>
+        <td class="light"></td>
+        <td class="dark"></td>
+        <td class="light"></td>
+        <td class="dark"></td>
+        <td class="light"></td>
+        <td class="dark"></td>
+        <td class="light"></td>
+        <td class="dark"></td>
+      </tr>
+      <tr>
+        <th>5</th>
+        <td class="dark"></td>
+        <td class="light"></td>
+        <td class="dark"></td>
+        <td class="light"></td>
+        <td class="dark"></td>
+        <td class="light"></td>
+        <td class="dark"></td>
+        <td class="light"></td>
+      </tr>
+      <tr>
+        <th>4</th>
+        <td class="light"></td>
+        <td class="dark"></td>
+        <td class="light"></td>
+        <td class="dark"><img class="piece" src="img/WhiteP.ico"></td>
+        <td class="light"></td>
+        <td class="dark"></td>
+        <td class="light"></td>
+        <td class="dark"></td>
+      </tr>
+      <tr>
+        <th>3</th>
+        <td class="dark"></td>
+        <td class="light"></td>
+        <td class="dark"></td>
+        <td class="light"></td>
+        <td class="dark"></td>
+        <td class="light"></td>
+        <td class="dark"></td>
+        <td class="light"></td>
+      </tr>
+      <tr>
+        <th>2</th>
+        <td class="light"><img class="piece" src="img/WhiteP.ico"></td>
+        <td class="dark"><img class="piece" src="img/WhiteP.ico"></td>
+        <td class="light"><img class="piece" src="img/WhiteP.ico"></td>
+        <td class="dark"></td>
+        <td class="light"><img class="piece" src="img/WhiteP.ico"></td>
+        <td class="dark"><img class="piece" src="img/WhiteP.ico"></td>
+        <td class="light"><img class="piece" src="img/WhiteP.ico"></td>
+        <td class="dark"><img class="piece" src="img/WhiteP.ico"></td>
+      </tr>
+      <tr>
+        <th>1</th>
+        <td class="dark"><img class="piece" src="img/WhiteR.ico"></td>
+        <td class="light"><img class="piece" src="img/WhiteN.ico"></td>
+        <td class="dark"><img class="piece" src="img/WhiteB.ico"></td>
+        <td class="light"><img class="piece" src="img/WhiteQ.ico"></td>
+        <td class="dark"><img class="piece" src="img/WhiteK.ico"></td>
+        <td class="light"><img class="piece" src="img/WhiteB.ico"></td>
+        <td class="dark"><img class="piece" src="img/WhiteN.ico"></td>
+        <td class="light"><img class="piece" src="img/WhiteR.ico"></td>
+      </tr>
+      <tbody>
+    </table>
+    </div>
+    <div id="black1">
+      <table class="board">
+      <caption><h1>Chess</h1></caption>
+      <thead>
+      <tr>
+        <th>Markers</th>
+        <th>a</th>
+        <th>b</th>
+        <th>c</th>
+        <th>d</th>
+        <th>e</th>
+        <th>f</th>
+        <th>g</th>
+        <th>h</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <th>8</th>
+        <td class="light"><img class="piece" src="img/BlackR.ico"></td>
+        <td class="dark"><img class="piece" src="img/BlackN.ico"></td>
+        <td class="light"><img class="piece" src="img/BlackB.ico"></td>
+        <td class="dark"><img class="piece" src="img/BlackQ.ico"></td>
+        <td class="light"><img class="piece" src="img/BlackK.ico"></td>
+        <td class="dark"><img class="piece" src="img/BlackB.ico"></td>
+        <td class="light"></td>
+        <td class="dark"><img class="piece" src="img/BlackR.ico"></td>
+      </tr>
+      <tr>
+        <th>7</th>
+        <td class="dark"><img class="piece" src="img/BlackP.ico"></td>
+        <td class="light"><img class="piece" src="img/BlackP.ico"></td>
+        <td class="dark"><img class="piece" src="img/BlackP.ico"></td>
+        <td class="light"><img class="piece" src="img/BlackP.ico"></td>
+        <td class="dark"><img class="piece" src="img/BlackP.ico"></td>
+        <td class="light"><img class="piece" src="img/BlackP.ico"></td>
+        <td class="dark"><img class="piece" src="img/BlackP.ico"></td>
+        <td class="light"><img class="piece" src="img/BlackP.ico"></td>
+      </tr>
+      <tr>
+        <th>6</th>
+        <td class="light"></td>
+        <td class="dark"></td>
+        <td class="light"></td>
+        <td class="dark"></td>
+        <td class="light"></td>
+        <td class="dark"><img class="piece" src="img/BlackN.ico"></td>
+        <td class="light"></td>
+        <td class="dark"></td>
+      </tr>
+      <tr>
+        <th>5</th>
+        <td class="dark"></td>
+        <td class="light"></td>
+        <td class="dark"></td>
+        <td class="light"></td>
+        <td class="dark"></td>
+        <td class="light"></td>
+        <td class="dark"></td>
+        <td class="light"></td>
+      </tr>
+      <tr>
+        <th>4</th>
+        <td class="light"></td>
+        <td class="dark"></td>
+        <td class="light"></td>
+        <td class="dark"><img class="piece" src="img/WhiteP.ico"></td>
+        <td class="light"></td>
+        <td class="dark"></td>
+        <td class="light"></td>
+        <td class="dark"></td>
+      </tr>
+      <tr>
+        <th>3</th>
+        <td class="dark"></td>
+        <td class="light"></td>
+        <td class="dark"></td>
+        <td class="light"></td>
+        <td class="dark"></td>
+        <td class="light"></td>
+        <td class="dark"></td>
+        <td class="light"></td>
+      </tr>
+      <tr>
+        <th>2</th>
+        <td class="light"><img class="piece" src="img/WhiteP.ico"></td>
+        <td class="dark"><img class="piece" src="img/WhiteP.ico"></td>
+        <td class="light"><img class="piece" src="img/WhiteP.ico"></td>
+        <td class="dark"></td>
+        <td class="light"><img class="piece" src="img/WhiteP.ico"></td>
+        <td class="dark"><img class="piece" src="img/WhiteP.ico"></td>
+        <td class="light"><img class="piece" src="img/WhiteP.ico"></td>
+        <td class="dark"><img class="piece" src="img/WhiteP.ico"></td>
+      </tr>
+      <tr>
+        <th>1</th>
+        <td class="dark"><img class="piece" src="img/WhiteR.ico"></td>
+        <td class="light"><img class="piece" src="img/WhiteN.ico"></td>
+        <td class="dark"><img class="piece" src="img/WhiteB.ico"></td>
+        <td class="light"><img class="piece" src="img/WhiteQ.ico"></td>
+        <td class="dark"><img class="piece" src="img/WhiteK.ico"></td>
+        <td class="light"><img class="piece" src="img/WhiteB.ico"></td>
+        <td class="dark"><img class="piece" src="img/WhiteN.ico"></td>
+        <td class="light"><img class="piece" src="img/WhiteR.ico"></td>
+      </tr>
+      <tbody>
+    </table>
+    </div>
     <button class="button" id="rewind" type="button">Rewind</button>
     <button class="button" id="step_back" type="button">Step Back</button>
     <button class="button" id="play_pause" type="button">Play/Pause</button>
