--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     	<tbody>
     </table>
     </div>
-    <div id="white1">
+    <div id="white1" class="white1">
       <table class="board">
       <caption><h1>Chess</h1></caption>
       <thead>
@@ -344,11 +344,120 @@
       <tbody>
     </table>
     </div>
-    <button class="button" id="rewind" type="button">Rewind</button>
-    <button class="button" id="step_back" type="button">Step Back</button>
-    <button class="button" id="play_pause" type="button">Play/Pause</button>
-    <button class="button" id="step_foward" type="button">Step Forward</button>
-    <button class="button" id="fast_foward" type="button">Fast Forward</button>
+    <div id="white2">
+      <table class="board">
+      <caption><h1>Chess</h1></caption>
+      <thead>
+      <tr>
+        <th>Markers</th>
+        <th>a</th>
+        <th>b</th>
+        <th>c</th>
+        <th>d</th>
+        <th>e</th>
+        <th>f</th>
+        <th>g</th>
+        <th>h</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <th>8</th>
+        <td class="light"><img class="piece" src="img/BlackR.ico"></td>
+        <td class="dark"><img class="piece" src="img/BlackN.ico"></td>
+        <td class="light"><img class="piece" src="img/BlackB.ico"></td>
+        <td class="dark"><img class="piece" src="img/BlackQ.ico"></td>
+        <td class="light"><img class="piece" src="img/BlackK.ico"></td>
+        <td class="dark"><img class="piece" src="img/BlackB.ico"></td>
+        <td class="light"></td>
+        <td class="dark"><img class="piece" src="img/BlackR.ico"></td>
+      </tr>
+      <tr>
+        <th>7</th>
+        <td class="dark"><img class="piece" src="img/BlackP.ico"></td>
+        <td class="light"><img class="piece" src="img/BlackP.ico"></td>
+        <td class="dark"><img class="piece" src="img/BlackP.ico"></td>
+        <td class="light"><img class="piece" src="img/BlackP.ico"></td>
+        <td class="dark"><img class="piece" src="img/BlackP.ico"></td>
+        <td class="light"><img class="piece" src="img/BlackP.ico"></td>
+        <td class="dark"><img class="piece" src="img/BlackP.ico"></td>
+        <td class="light"><img class="piece" src="img/BlackP.ico"></td>
+      </tr>
+      <tr>
+        <th>6</th>
+        <td class="light"></td>
+        <td class="dark"></td>
+        <td class="light"></td>
+        <td class="dark"></td>
+        <td class="light"></td>
+        <td class="dark"><img class="piece" src="img/BlackN.ico"></td>
+        <td class="light"></td>
+        <td class="dark"></td>
+      </tr>
+      <tr>
+        <th>5</th>
+        <td class="dark"></td>
+        <td class="light"></td>
+        <td class="dark"></td>
+        <td class="light"></td>
+        <td class="dark"></td>
+        <td class="light"></td>
+        <td class="dark"></td>
+        <td class="light"></td>
+      </tr>
+      <tr>
+        <th>4</th>
+        <td class="light"></td>
+        <td class="dark"></td>
+        <td class="light"><img class="piece" src="img/WhiteP.ico"></td>
+        <td class="dark"><img class="piece" src="img/WhiteP.ico"></td>
+        <td class="light"></td>
+        <td class="dark"></td>
+        <td class="light"></td>
+        <td class="dark"></td>
+      </tr>
+      <tr>
+        <th>3</th>
+        <td class="dark"></td>
+        <td class="light"></td>
+        <td class="dark"></td>
+        <td class="light"></td>
+        <td class="dark"></td>
+        <td class="light"></td>
+        <td class="dark"></td>
+        <td class="light"></td>
+      </tr>
+      <tr>
+        <th>2</th>
+        <td class="light"><img class="piece" src="img/WhiteP.ico"></td>
+        <td class="dark"><img class="piece" src="img/WhiteP.ico"></td>
+        <td class="light"></td>
+        <td class="dark"></td>
+        <td class="light"><img class="piece" src="img/WhiteP.ico"></td>
+        <td class="dark"><img class="piece" src="img/WhiteP.ico"></td>
+        <td class="light"><img class="piece" src="img/WhiteP.ico"></td>
+        <td class="dark"><img class="piece" src="img/WhiteP.ico"></td>
+      </tr>
+      <tr>
+        <th>1</th>
+        <td class="dark"><img class="piece" src="img/WhiteR.ico"></td>
+        <td class="light"><img class="piece" src="img/WhiteN.ico"></td>
+        <td class="dark"><img class="piece" src="img/WhiteB.ico"></td>
+        <td class="light"><img class="piece" src="img/WhiteQ.ico"></td>
+        <td class="dark"><img class="piece" src="img/WhiteK.ico"></td>
+        <td class="light"><img class="piece" src="img/WhiteB.ico"></td>
+        <td class="dark"><img class="piece" src="img/WhiteN.ico"></td>
+        <td class="light"><img class="piece" src="img/WhiteR.ico"></td>
+      </tr>
+      <tbody>
+    </table>
+    </div>
+    <!-- <button class="button" id="rewind" type="button">Rewind</button> -->
+    <!-- <button class="button" id="step_back" type="button">Step Back</button> -->
+    <button class="button" id="play_pause" type="button">Play</button>
+    <button class="button" id="white_1" type="button">Move 1</button>
+    <!-- <button class="button" id="step_foward" type="button">Step Forward</button> -->
+    <!-- <button class="button" id="fast_foward" type="button">Fast Forward</button> -->
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
