edits to make it work

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-      <div id="start">
+      <div id="move_0" class="showMove">
       <table class="board">
     	<caption><h1>Chess</h1></caption>
     	<thead>
@@ -128,7 +128,7 @@
     	<tbody>
     </table>
     </div>
-    <div id="white1" class="white1">
+    <div id="move_1" class="hideMove">
       <table class="board">
       <caption><h1>Chess</h1></caption>
       <thead>
@@ -236,7 +236,7 @@
       <tbody>
     </table>
     </div>
-    <div id="black1">
+    <div id="move_2" class="hideMove">
       <table class="board">
       <caption><h1>Chess</h1></caption>
       <thead>
@@ -344,7 +344,7 @@
       <tbody>
     </table>
     </div>
-    <div id="white2">
+    <div id="move_3" class="hideMove">
       <table class="board">
       <caption><h1>Chess</h1></caption>
       <thead>
@@ -453,10 +453,10 @@
     </table>
     </div>
     <!-- <button class="button" id="rewind" type="button">Rewind</button> -->
-    <!-- <button class="button" id="step_back" type="button">Step Back</button> -->
-    <button class="button" id="play_pause" type="button">Play</button>
-    <button class="button" id="white_1" type="button">Move 1</button>
-    <!-- <button class="button" id="step_foward" type="button">Step Forward</button> -->
+    <button class="button" id="previous" type="button">Previous</button>
+    <!-- <button class="button" id="play_pause" type="button">Reset Board</button> -->
+    <!-- <button class="button" id="white_1" type="button">Move 1</button> -->
+    <button class="button" id="next" type="button">Next</button>
     <!-- <button class="button" id="fast_foward" type="button">Fast Forward</button> -->
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
