all buttons work

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-      <div id="move_0" class="showMove">
+      <div id="move_0">
       <table class="board">
-    	<caption><h1>Chess</h1></caption>
+    	<caption><h1>Catalan Opening: Closed Variation</h1></caption>
     	<thead>
     	<tr>
     		<th>Markers</th>
@@ -130,7 +130,7 @@
     </div>
     <div id="move_1" class="hideMove">
       <table class="board">
-      <caption><h1>Chess</h1></caption>
+      <caption><h1>Catalan Opening: Closed Variation</h1></caption>
       <thead>
       <tr>
         <th>Markers</th>
@@ -238,7 +238,7 @@
     </div>
     <div id="move_2" class="hideMove">
       <table class="board">
-      <caption><h1>Chess</h1></caption>
+      <caption><h1>Catalan Opening: Closed Variation</h1></caption>
       <thead>
       <tr>
         <th>Markers</th>
@@ -346,7 +346,7 @@
     </div>
     <div id="move_3" class="hideMove">
       <table class="board">
-      <caption><h1>Chess</h1></caption>
+      <caption><h1>Catalan Opening: Closed Variation</h1></caption>
       <thead>
       <tr>
         <th>Markers</th>
@@ -454,7 +454,7 @@
     </div>
     <div id="move_4" class="hideMove">
       <table class="board">
-      <caption><h1>Chess</h1></caption>
+      <caption><h1>Catalan Opening: Closed Variation</h1></caption>
       <thead>
       <tr>
         <th>Markers</th>
@@ -562,7 +562,7 @@
     </div>
     <div id="move_5" class="hideMove">
       <table class="board">
-      <caption><h1>Chess</h1></caption>
+      <caption><h1>Catalan Opening: Closed Variation</h1></caption>
       <thead>
       <tr>
         <th>Markers</th>
@@ -670,7 +670,7 @@
     </div>
     <div id="move_6" class="hideMove">
       <table class="board">
-      <caption><h1>Chess</h1></caption>
+      <caption><h1>Catalan Opening: Closed Variation</h1></caption>
       <thead>
       <tr>
         <th>Markers</th>
@@ -778,7 +778,7 @@
     </div>
     <div id="move_7" class="hideMove">
       <table class="board">
-      <caption><h1>Chess</h1></caption>
+      <caption><h1>Catalan Opening: Closed Variation</h1></caption>
       <thead>
       <tr>
         <th>Markers</th>
@@ -886,7 +886,7 @@
     </div>
     <div id="move_8" class="hideMove">
       <table class="board">
-      <caption><h1>Chess</h1></caption>
+      <caption><h1>Catalan Opening: Closed Variation</h1></caption>
       <thead>
       <tr>
         <th>Markers</th>
@@ -994,7 +994,7 @@
     </div>
     <div id="move_9" class="hideMove">
       <table class="board">
-      <caption><h1>Chess</h1></caption>
+      <caption><h1>Catalan Opening: Closed Variation</h1></caption>
       <thead>
       <tr>
         <th>Markers</th>
@@ -1100,12 +1100,10 @@
       <tbody>
     </table>
     </div>
-    <!-- <button class="button" id="rewind" type="button">Rewind</button> -->
+    <button class="button" id="rewind" type="button">Rewind</button>
     <button class="button" id="previous" type="button">Previous</button>
-    <!-- <button class="button" id="play_pause" type="button">Reset Board</button> -->
-    <!-- <button class="button" id="white_1" type="button">Move 1</button> -->
     <button class="button" id="next" type="button">Next</button>
-    <!-- <button class="button" id="fast_foward" type="button">Fast Forward</button> -->
+    <button class="button" id="fast_foward" type="button">Fast Forward</button>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
