--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
+      <audio id="final" autoplay="autoplay">
+        <source src="img/final_countdown.mp3" type="audio/mp3">
+      </audio>
+      <button class="button" id="mute" type="button" onclick="document.getElementById('final').pause()">Mute</button>
+      <img class="queen" src="img/freddie_mercury.png">
+      
       <div id="move_0">
       <table class="board">
     	<caption><h1>Catalan Opening: Closed Variation</h1></caption>
@@ -1100,11 +1106,12 @@
       <tbody>
     </table>
     </div>
+    <div class="center">
     <button class="button" id="rewind" type="button">Rewind</button>
     <button class="button" id="previous" type="button">Previous</button>
     <button class="button" id="next" type="button">Next</button>
     <button class="button" id="fast_foward" type="button">Fast Forward</button>
-
+    </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
