now with more queen

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 
         <!-- Add your site or application content here -->
       <audio id="final" autoplay="autoplay">
-        <source src="img/final_countdown.mp3" type="audio/mp3">
+        <source src="img/queen.mp3" type="audio/mp3">
       </audio>
       <button class="button" id="mute" type="button" onclick="document.getElementById('final').pause()">Mute</button>
       <img class="queen" src="img/freddie_mercury.png">
-      
+
       <div id="move_0">
       <table class="board">
     	<caption><h1>Catalan Opening: Closed Variation</h1></caption>
