beast/nightmare mode attempt

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <img class="queen" src="img/freddie_mercury.png"> -->
 
       <div id="move_0">
-      <table class="board">
+      <table class="chessboard">
     	<caption><h1>Catalan Opening: Closed Variation</h1></caption>
     	<thead>
     	<tr>
